GNOME Bugzilla – Bug 760962
style: fix .diff .patch colors
Last modified: 2016-01-25 01:31:42 UTC
The .diff and .patch colors are not easily readable on screen, especially the light green on added lines
The complexity here is that the IdeLineChangeGutterRenderer uses diff:added-line and diff:changed-line for the colors to use in the left gutter. We need to add a new style to builder.xml and builder-dark.xml to use for the gutter, so that diff:added-line and diff:changed-line can be changed while preserving the color in the gutter. I would suggest gutter:added-line and gutter:changed-line as new styles (and update libide/ide-line-change-gutter-renderer.c) with fallbacks to diff:added-line and diff:changed-line.
Created attachment 319598 [details] [review] Changed colors regarding diff:added-lines and diff:changed-line and added gutter:added-line and gutter:changed-line
Thanks! Added a followup commit to tweak the color a bit. Attachment 319598 [details] pushed as 5946b9b - Changed colors regarding diff:added-lines and diff:changed-line and added gutter:added-line and gutter:changed-line