Changed colors regarding diff:added-lines and diff:changed-line and added gutter:added-line and gutter:changed-line

https://bugzilla.gnome.org/show_bug.cgi?id=760962